# pyggp

./: README.md  pyproject.toml
docs/: gdl_ref.md  http_ref.md  structure.md
examples/: builtin_players.py  custom_player.py
ggp/: __init__.py
ggp/player/: base.py  legal.py  random.py  statemachine.py
ggp/protocol/: messages.py  parser.py
ggp/server/: http_server.py
ggp_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_player_server.py  test_protocol.py
