[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggp-py"
version = "0.1.0"
description = "A General Game Playing (GGP) HTTP player framework for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []   # zero runtime dependencies — stdlib only

[project.optional-dependencies]
# Install with:  pip install -e ".[dev]"
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/yourname/ggp-py"

# ---------------------------------------------------------------------------
# pytest (only used when the dev extra is installed)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["ggp*"]
